Functional HoverCard workflowNode component implemented

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,6 +7,7 @@
   --color-secondary: #394368;
   --color-background: #FFFFFF
   --color-accent: #766649;
+  --color-secondaryTwo: #7386CA;
 
   --font-roboto: "Roboto", sans-serif;
 }
